--- a/src/app/components/Chat/chat-window/chat-window.component.html
+++ b/src/app/components/Chat/chat-window/chat-window.component.html
@@ -1,7 +1,7 @@
 <div>
 <!-- Passed group ID into side menu -->
 <app-side-menu [selectedGroupId]="selectedGroupId"></app-side-menu>
-<div *ngIf="!(openChat === null)">
+<div *ngIf="!(openChatId === null)">
     <!-- open area for when a chat is selected. Need to figure out how to pass a selected group id up to the parent. Is doable but might not be the best idea. -->
      <div class="chatMessageDisplay">
         <div *ngFor="let message of openChatMessages">
