--- a/src/app/components/Chat/side-menu/side-menu.component.css
+++ b/src/app/components/Chat/side-menu/side-menu.component.css
@@ -1,14 +1,17 @@
 .OpenMenuContainer{
     width: 30%;
-    height: 100%;
+    height: 99%;
     position: fixed;
     border-style: dashed;
+    background-color: beige;
     
 }
 .ChatPreviewContainer{
     bottom: 0;
     left: 0;
-    position:absolute
+    position:absolute;
+    width: 100%;
+    height: 25%
 
 
 }
@@ -22,4 +25,7 @@
     height: max-content;
     position: fixed;
     border-style: dashed;
+}
+button{
+    align-self: center;
 }
