--- a/src/app/components/Chat/side-menu/side-menu.component.html
+++ b/src/app/components/Chat/side-menu/side-menu.component.html
@@ -1,17 +1,16 @@
 <div *ngIf="toggleState" class="OpenMenuContainer">
-    <button *ngIf="toggleState" (click)="toggleState =false"> Close Menu</button>
+    <button *ngIf="toggleState" (click)="toggleState =false">|||</button>
+    <button [routerLink]="['']" routerLinkActive="router-link-active" >All Groups</button>
+    <h3>Current Group: {{selectedGroupId}}</h3>
     <div class="ChatPreviewContainer">
-        <div *ngFor="let chat of chatMessages">
+        <div *ngFor="let chat of chats">
             <div class="ChatPreview">
-            ----------
-            {{chat.chatId}}
-            {{chat.originalMessage}}
-            {{chat.filteredMessage}}
-            ----------
+            Chat id: {{chat.chatId}}
+            Chat Users: {{fakeUsers}}
             </div>
         </div>
     </div>
 </div>
 <div  *ngIf="!toggleState" class="ClosedMenuContainer">
-    <button (click)="toggleState =true"> Open Menu</button>
+    <button (click)="toggleState =true">|||</button>
 </div>
