fixed material addition and refactored side menu selection options

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,5 @@ body, html {
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
