--- a/src/app/components/Chat/side-menu/side-menu.component.html
+++ b/src/app/components/Chat/side-menu/side-menu.component.html
@@ -1,16 +1,16 @@
-<div *ngIf="toggleState" class="OpenMenuContainer">
+<!-- <div *ngIf="toggleState" class="OpenMenuContainer">
     <button *ngIf="toggleState" (click)="toggleState =false">|||</button>
     <button [routerLink]="['']" routerLinkActive="router-link-active" >All Groups</button>
     <h3>Current Group: {{selectedGroupId}}</h3>
     <div class="ChatPreviewContainer">
-        <div *ngFor="let chat of chats">
+        <div *ngFor="let chat of completeChats, let i = index">
             <div class="ChatPreview">
-            Chat id: {{chat.chatId}}
-            Chat Users: {{fakeUsers}}
+            Chat id: {{chat.chat.chatId}}
+            Chat Users: <span *ngFor="let user of chat.chatUsers">{{user.pseudonym}} </span>
             </div>
         </div>
     </div>
 </div>
 <div  *ngIf="!toggleState" class="ClosedMenuContainer">
     <button (click)="toggleState =true">|||</button>
-</div>
+</div> -->
