Setup initial Authentication. User cannot be created in the backend until Azure is setup

--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,6 +1,5 @@
 <div class="container">
     <div class="loginContainer">
-        <button [routerLink]="['groups']">Log In</button>
+        <button (click)="logIn()">Log In</button>
     </div>
-
 </div>
