--- a/src/app/components/Chat/message/message.component.html
+++ b/src/app/components/Chat/message/message.component.html
@@ -2,6 +2,9 @@
     <span>{{author}}</span>
     <div class="message-box" 
         [ngClass]="USERID === author ? 'message-right' : 'message-left'">
-        <p>{{message}}</p>
+        <p>
+            {{message}}<br>
+            {{pseudonym}}
+        </p>
     </div>
 </div>
