adding group create page and dialog options

--- a/src/app/components/group-menu/group-menu.component.html
+++ b/src/app/components/group-menu/group-menu.component.html
@@ -1,6 +1,8 @@
 <div class="container">
 
     <h1 id="title" class="noselect">Your Groups</h1>
+
+    <button (click)="openCreateGroupPage()">Create a group</button>
     
     <div id="group-list">
         <a 
