--- a/src/app/components/group-create-page/group-create-page.component.html
+++ b/src/app/components/group-create-page/group-create-page.component.html
@@ -1,59 +1,62 @@
-<form [formGroup]="newGroupForm">
-    <mat-card class="shipping-card">
-        <mat-card-header>
-          <mat-card-title>Create Group Form</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-            <div class="row">
-                <div class="col">
-                  <mat-form-field class="full-width">
-                    <input matInput placeholder="Group name" formControlName="name">
-                    @if (newGroupForm.controls['name'].hasError('required')) {
-                      <mat-error>Group name is <strong>required</strong></mat-error>
-                    }
-                  </mat-form-field>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                  <button (click)="onSubmit()">Submit</button>
-                </div>
-            </div>
-            <mat-form-field class="example-full-width">
-              <mat-label>Email Search</mat-label>
-              <input type="text"
-                     placeholder=""
-                     aria-label="Email Search"
-                     matInput
-                     name ="selectedUser"
-                     [formControl] = "userSelectControl"
-                     [matAutocomplete]="auto">
-              <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                @for (user of availableUsers | async; track user) {
-                  <mat-option [value]="user" (click)="addUser(user)">{{user.email}}</mat-option>
-                }
-              </mat-autocomplete>
-            </mat-form-field>
-              <table mat-table [dataSource]="selectedUsers">
-                <ng-container matColumnDef="id">
-                  <th mat-header-cell *matHeaderCellDef>Id</th>
-                  <td mat-cell *matCellDef="let user">{{user.id}}</td>
-                </ng-container>
-                <ng-container matColumnDef="userName">
-                  <th mat-header-cell *matHeaderCellDef>Username</th>
-                  <td mat-cell *matCellDef="let user">{{user.userName}}</td>
-                </ng-container>
-                <ng-container matColumnDef="email">
-                  <th mat-header-cell *matHeaderCellDef>Email</th>
-                  <td mat-cell *matCellDef="let user">{{user.email}}</td>
-                </ng-container>
-                <ng-container matColumnDef="deleteButton">
-                  <th mat-header-cell *matHeaderCellDef>Delete</th>
-                  <td mat-cell *matCellDef="let user"><button (click)="deleteUserFromTable(user)">Remove</button></td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              </table>
-        </mat-card-content>
-    </mat-card>
-</form>
+
+<mat-dialog-content>
+  <form [formGroup]="newGroupForm">
+      <mat-card class="shipping-card">
+          <mat-card-header>
+            <mat-card-title>Create Group Form</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+              <div class="row">
+                  <div class="col">
+                    <mat-form-field class="full-width">
+                      <input matInput placeholder="Group name" formControlName="name">
+                      @if (newGroupForm.controls['name'].hasError('required')) {
+                        <mat-error>Group name is <strong>required</strong></mat-error>
+                      }
+                    </mat-form-field>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col">
+                    <button (click)="onSubmit()">Submit</button>
+                  </div>
+              </div>
+              <mat-form-field class="example-full-width">
+                <mat-label>Email Search</mat-label>
+                <input type="text"
+                      placeholder=""
+                      aria-label="Email Search"
+                      matInput
+                      name ="selectedUser"
+                      [formControl] = "userSelectControl"
+                      [matAutocomplete]="auto">
+                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                  @for (user of availableUsers | async; track user) {
+                    <mat-option [value]="user" (click)="addUser(user)">{{user.email}}</mat-option>
+                  }
+                </mat-autocomplete>
+              </mat-form-field>
+                <table mat-table [dataSource]="selectedUsers">
+                  <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef>Id</th>
+                    <td mat-cell *matCellDef="let user">{{user.id}}</td>
+                  </ng-container>
+                  <ng-container matColumnDef="userName">
+                    <th mat-header-cell *matHeaderCellDef>Username</th>
+                    <td mat-cell *matCellDef="let user">{{user.userName}}</td>
+                  </ng-container>
+                  <ng-container matColumnDef="email">
+                    <th mat-header-cell *matHeaderCellDef>Email</th>
+                    <td mat-cell *matCellDef="let user">{{user.email}}</td>
+                  </ng-container>
+                  <ng-container matColumnDef="deleteButton">
+                    <th mat-header-cell *matHeaderCellDef>Delete</th>
+                    <td mat-cell *matCellDef="let user"><button (click)="deleteUserFromTable(user)">Remove</button></td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+          </mat-card-content>
+      </mat-card>
+  </form>
+</mat-dialog-content>
