--- a/src/app/components/group-create-page/group-create-page.component.html
+++ b/src/app/components/group-create-page/group-create-page.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]="newGroupForm">
+@if(isLoaded){
+  <form [formGroup]="newGroupForm">
     <mat-card class="shipping-card">
         <mat-card-header>
           <mat-card-title>Create Group Form</mat-card-title>
@@ -57,3 +58,7 @@
         </mat-card-content>
     </mat-card>
 </form>
+}
+@else {
+  <mat-spinner></mat-spinner>
+}
