--- a/src/app/components/Chat/message/message.component.css
+++ b/src/app/components/Chat/message/message.component.css
@@ -1,7 +1,8 @@
 .container {
+    color: var(--primary-text-color);
     display: flex;
     flex-direction: column;
-    margin: 10px;
+    margin: 5px 10px;
 }
 
 .container-left {
@@ -13,20 +14,31 @@
 }
 
 .message-box {
+    display: flex;
+    justify-content: center;
+    align-content: center;
     color: white;
+
     width: fit-content;
     max-width: 30vw;
     height: fit-content;
     text-align: left;
-    padding: 5px 20px;
+    font-size: 1rem;
+    padding: 15px;
 }
 
 .message-left {
-    border-radius: 30px 30px 30px 0;
+    border-radius: 25px 25px 25px 0;
     background-color: rgb(148, 147, 147);
 }
 
 .message-right {
-    border-radius: 30px 30px 0 30px;
+    border-radius: 25px 25px 0 25px;
     background-color: rgb(157, 63, 204);
+}
+
+.sender-name {
+    color: var(--primary-text-color);
+    font-size: 1rem;
+    padding: 5px 15px;
 }
