--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,5 +1,8 @@
-<div class="container">
-    <div class="loginContainer">
-        <button (click)="logIn()">Log In</button>
-    </div>
+<div class="mainContainer">
+    <mat-card class="loginCard">
+        <mat-card-title style="margin-bottom: 20px;">Welcome to Anonymous Chats!</mat-card-title>
+        <mat-card-content class="loginContent">
+            <button mat-flat-button (click)="logIn()">Log In</button>
+        </mat-card-content>
+    </mat-card>
 </div>
