added in a background image... lol.

--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,3 +1,5 @@
+<div style="background-image: url('/basicBackground.png'); background-attachment: fixed; box-shadow: inset 0 0 50px 8px #282a2d;">
+
 <div class="mainContainer">
     <mat-card class="loginCard">
         <mat-card-title style="margin-bottom: 20px;">Welcome to Anonymous Chats!</mat-card-title>
@@ -6,3 +8,4 @@
         </mat-card-content>
     </mat-card>
 </div>
+</div> 
