--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<div style="background-image: url('/basicBackground.png'); background-attachment: fixed; box-shadow: inset 0 0 50px 8px #282a2d;">
+<div style="background-image: url('/basicBackground.png'); background-attachment: fixed; box-shadow: inset 0 0 50px 8px #282a2d; background-repeat: no-repeat; background-position: center;">
 
 <div class="mainContainer">
     <mat-card class="loginCard">
